--- a/pc.html
+++ b/pc.html
@@ -152,7 +152,7 @@
               position: absolute;
               right: 0;
               bottom: 0;
-              height: 5rem;
+              height: 5vh;
               width: 100%;
               background: white;
               padding: 0.2rem;
@@ -161,11 +161,41 @@
             <div style="position: relative; height: 100%; background: black"></div>
           </div>
           <div
-            style="position: absolute; right: 0; height: 100%; top: 0; width: 25rem; background: white; padding: 0.2rem"
+            style="position: absolute; right: 0; height: 100%; top: 0; width: 25vw; background: white; padding: 0.2rem"
           >
             <div style="position: relative; height: 100%; background: black"></div>
           </div>
         </div>
+      </div>
+    </div>
+    <div class="header" style="background: white; height: fit-content">
+      <div class="content" style="padding-top: 3rem; padding-bottom: 3rem">
+        <div class="card" style="max-width: 35rem">
+          <img src="..." class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the bulk of the card's content.
+            </p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+        <div class="card" style="max-width: 35rem; margin-left: auto; margin-right: 0">
+          <img src="..." class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the bulk of the card's content.
+            </p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="header" style="background: black">
+      <div class="content" style="padding-top: 3rem; padding-bottom: 3rem; background: white">
+        <hr />
+        <h1 class="youre-welcome">Мои проекты</h1>
       </div>
     </div>
   </body>
