--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
         ></path>
       </svg>
     </div>
-    <div class="catbg slider">
+    <div class="catbg slider2">
       <div class="main-transparent">
         <h3 class="h3 text-center">Но... тут в основном пикчи котиков...</h3>
       </div>
