--- a/pc.html
+++ b/pc.html
@@ -73,10 +73,10 @@
     </div>
 
     <div class="content">
-      <div class="d-flex w-100">
+      <div class="d-flex flex-wrap w-100">
         <div class="col">
           <img src="./src/pc_index/PSD.png" style="position: absolute; left: -20vw; width: 40%" />
-          <h1 style="padding-top: 15rem">Обо мне</h1>
+          <h1 class="about-me-pc-padding">Обо мне</h1>
           <h2>немного инфы</h2>
           <div class="d-flex flex-row" style="padding-top: 10vw">
             <h1>Я</h1>
@@ -84,8 +84,8 @@
           </div>
         </div>
         <div class="col">
-          <div style="padding-left: 10rem">
-            <h2 style="padding-top: 10rem">_index.html</h2>
+          <div>
+            <h2>_index.html</h2>
             <p>
               &lt;!DOCTYPE html><br />
               &lt;html lang="en"><br />
